# matrix_calculator

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile
.github/workflows/: ci.yml
html/: graph_legend.html  index.html  md_README.html  pages.html
html/search/: all_0.js
include/: matrix.h
latex/: md_README.tex  refman.tex
src/: main.cpp  matrix.cpp
tests/: CMakeLists.txt  test_matrix.cpp
